<resources>
    <string name="app_name">SherlockAdapter</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">添加数据</string>
    <string name="action_completed">完成加载</string>
    <string name="action_failed">加载失败</string>
    <string name="action_close">关闭加载</string>
    <string name="action_error">异常数据</string>
    <string name="action_empty">空数据</string>

    <string name="always_show_head">总是显示头部</string>
    <string name="always_show_food">总是显示尾部</string>

    <string name="full_span">FullSpan</string>
    <string name="span_count">SpanSize</string>

    <string name="head1">头部1</string>
    <string name="head2">头部2</string>

    <string name="action_use_diff_util">Use DiffUtil</string>
    <string name="action_not_use_diff_util">Not Use DiffUtil</string>

    <string name="action_use_grid">GridLayoutManager</string>
    <string name="action_ues_staggered">StaggeredGridLayoutManager</string>

    <string name="github">https://github.com/EvilBT/SherlockAdapter</string>

    <string-array name="activity_title">
        <item>BasicActivity</item>
        <item>HeadAndFootActivity</item>
        <item>AutoLoadMoreActivity</item>
        <item>MultiItemActivity</item>
        <item>ExpandableActivity</item>
        <item>MultiSelectItemActivity</item>

    </string-array>

    <string-array name="list">
        <item>Android</item>
        <item>iOS</item>
        <item>Java</item>
        <item>JavaScript</item>
        <item>Python</item>
        <item>C</item>
        <item>C++</item>
        <item>Ruby</item>
        <item>AngularJs</item>
        <item>ReactJs</item>
        <item>Html5</item>
        <item>TensorFlow</item>
        <item>Swift</item>
    </string-array>
    <string name="title_activity_multi_item">MultiItemActivity</string>
    <string name="title_activity_HeadAndFoot">HeadAndFootActivity</string>
    <string name="title_activity_AutoLoadMore">AutoLoadMoreActivity</string>
    <string name="title_activity_expandable">ExpandableActivity</string>
    <string name="details">详情</string>
    <string name="title_activity_multi_select_item">MultiSelectItemActivity</string>
    <string name="title_activity_basic">BasicActivity</string>
</resources>
