<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/act_auto_load_more"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xyz.zpayh.myadapter.AutoLoadMoreActivity">
    <LinearLayout
        android:background="@color/base_divider_color"
        android:layout_alignParentBottom="true"
        android:id="@+id/button_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/action_add"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:paddingTop="@dimen/fab_margin"
            android:paddingBottom="@dimen/fab_margin"
            android:text="@string/action_add"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/action_failed"
            android:paddingTop="@dimen/fab_margin"
            android:paddingBottom="@dimen/fab_margin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/action_failed"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/action_completed"
            android:paddingTop="@dimen/fab_margin"
            android:paddingBottom="@dimen/fab_margin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/action_completed"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/action_empty"
            android:paddingTop="@dimen/fab_margin"
            android:paddingBottom="@dimen/fab_margin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/action_empty"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/action_close"
            android:paddingTop="@dimen/fab_margin"
            android:paddingBottom="@dimen/fab_margin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/action_close"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_above="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/cb_show_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/always_show_head"/>

        <CheckBox
            android:id="@+id/cb_show_foot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/always_show_food"/>
    </LinearLayout>
</RelativeLayout>
